✨ feat: 즐겨찾기 수취인 목록 조회 API (+slice 방식으로 변경)